Fix: Make changes to y-alignment only on mobile.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -41,7 +41,7 @@
   list-style: none;
   text-align: center;
   width: 60vw;
-  justify-content: start;
+  justify-content: end;
   margin-right: 2rem;
 }
 
@@ -83,6 +83,7 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
+    justify-content: start;
     width: 100%;
     height: 90vh;
     position: absolute;
